# github-actions-playground

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: 0__hello-world.yml  1__run_checks.yaml  2__build_docker.yaml  3__deploy_docker.yaml
examples/.github/workflows/: build_and_notify.yaml
masterclass/: main.py
tests/: test_basic.py
