[project]
name = "github-actions-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrzej",email = "andrzej@imprv.ai"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
